// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": false, "nextButtonDisabled": false} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div>
      <div
        class="navigationControlsButtonsComponent"
      >
        <div
          class="navigationControlsButtonCol"
        >
          <mock-button
            classname="navigationControlsDefaultButton"
            data-automation-id="back"
          >
            &lt; Back
          </mock-button>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div
        class="navigationControlsButtonsComponent"
      >
        <div
          class="navigationControlsButtonCol"
        >
          <mock-button
            classname="navigationControlsDefaultButton"
            data-automation-id="next"
          >
            Next &gt;
          </mock-button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": false, "nextButtonDisabled": true} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div>
      <div
        class="navigationControlsButtonsComponent"
      >
        <div
          class="navigationControlsButtonCol"
        >
          <mock-button
            classname="navigationControlsDefaultButton"
            data-automation-id="back"
          >
            &lt; Back
          </mock-button>
        </div>
      </div>
    </div>
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": true, "nextButtonDisabled": false} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div />
    <div />
    <div>
      <div
        class="navigationControlsButtonsComponent"
      >
        <div
          class="navigationControlsButtonCol"
        >
          <mock-button
            classname="navigationControlsDefaultButton"
            data-automation-id="next"
          >
            Next &gt;
          </mock-button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles button states: {"backButtonDisabled": true, "nextButtonDisabled": true} 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div />
    <div />
    <div />
  </div>
</DocumentFragment>
`;

exports[`IssueDetailsNavigationControls render handles failures count 0 failures 1`] = `<DocumentFragment />`;

exports[`IssueDetailsNavigationControls render handles failures count 1 failure 1`] = `<DocumentFragment />`;

exports[`IssueDetailsNavigationControls render handles failures count multiple failures 1`] = `
<DocumentFragment>
  <div
    class="insights-dialog-next-and-back-container"
  >
    <div>
      <div
        class="navigationControlsButtonsComponent"
      >
        <div
          class="navigationControlsButtonCol"
        >
          <mock-button
            classname="navigationControlsDefaultButton"
            data-automation-id="back"
          >
            &lt; Back
          </mock-button>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div
        class="navigationControlsButtonsComponent"
      >
        <div
          class="navigationControlsButtonCol"
        >
          <mock-button
            classname="navigationControlsDefaultButton"
            data-automation-id="next"
          >
            Next &gt;
          </mock-button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
